fix white space pre css

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -30,7 +30,7 @@ a:hover {
   }
 }
 .pre-wrap {
-  white-space: pre-wrap;
+  white-space: pre-line;
 }
 img {
   max-width: 100%;
